[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/generic/death_dummy.gd" type="Script" id=1]
[ext_resource path="res://sprites/claw/frame402.png" type="Texture2D" id=2]

[node name="DeathDummy" type="CharacterBody2D"]
script = ExtResource( 1 )

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource( 2 )

[node name="HangTimer" type="Timer" parent="."]

[node name="DespawnTimer" type="Timer" parent="."]
[connection signal="timeout" from="HangTimer" to="." method="_on_hang_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timeout"]
